src/assets/base.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100dvh;
  color: black;
  background: white;
  display: flex;
  font-family: 'Outfit', sans-serif;
  fill: black;
}

button, input, select, option {
  font-family: inherit;
}

.pan-zoom {
  height: min-content;
  width: min-content;
}

